--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -268,7 +268,7 @@
 <h1>
   upload
 </h1>
-<img [src]="_currentUserdetail.testurl===undefined ?'' : _currentUserdetail.testurl" />
+<button (click)='getUpload()'>Get upload</button>
 <div class="form-group">
   <label class="col-md-4 control-label" for="upload">Upload</label>
   <div class="col-md-4">
