--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </router-outlet>
 
 <div>
-  <button (click)="goTo('comp1')">COMP1</button>
+  <button (click)="goTo('icemaker')">icemaker</button>
   <button (click)="goTo('app')">APP</button>
 </div>
 
